--- a/app/src/main/res/layout/dialog_edit_text.xml
+++ b/app/src/main/res/layout/dialog_edit_text.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/activity_vertical_margin">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/tvPrompt"
@@ -12,36 +13,39 @@
         android:text="Prompt Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText"/>
 
     <EditText
         android:id="@+id/etValue"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvPrompt"
         android:inputType="textCapSentences"
-        tools:ignore="LabelFor" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPrompt"
+        tools:ignore="LabelFor"/>
 
     <Button
         android:id="@+id/btnCancel"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etValue"
-        android:layout_marginTop="5dp"
-        android:layout_toLeftOf="@+id/btnOk"
-        android:layout_toStartOf="@+id/btnOk"
-        android:text="@android:string/cancel" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@android:string/cancel"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnOk"
+        app:layout_constraintRight_toLeftOf="@+id/btnOk"/>
 
     <Button
         android:id="@+id/btnOk"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/etValue"
         android:layout_marginTop="5dp"
-        android:text="@android:string/ok" />
+        android:text="@android:string/ok"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etValue"/>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
