--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,35 +20,22 @@
         android:scrollbars="vertical"
         android:text="@string/intro_text"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/add_data_button"
+        app:layout_constraintBottom_toTopOf="@+id/run_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/add_data_button"
+        android:id="@+id/run_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:onClick="addData"
-        android:text="@string/add_data"
+        android:text="@string/run_code"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Button
-        android:id="@+id/query_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:onClick="queryData"
-        android:text="@string/query_data"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/add_data_button"
-        app:layout_constraintRight_toRightOf="@+id/clear_button"/>
 
     <Button
         android:id="@+id/clear_button"
