--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -32,8 +32,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:onClick="playMusic"
-        android:text="@string/play"
+        android:onClick="playAudioFile1"
+        android:text="@string/sound_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -44,8 +44,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:onClick="stopMusic"
-        android:text="@string/stop"
+        android:onClick="playAudioFile2"
+        android:text="@string/sound_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/add_data_button"
         app:layout_constraintRight_toRightOf="@+id/clear_button"/>
